# StormKit

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  StormKit.cflags  StormKit.config  StormKit.cxxflags  StormKit.files  StormKit.includes  StormKitConfig.cmake.in  StormKitConfigDependencies.cmake.in  StormKitSharedTargets-debug.cmake  StormKitSharedTargets-debug.cmake.in  StormKitSharedTargets-release.cmake.in  StormKitSharedTargets.cmake.in  StormKitStaticTargets-debug.cmake.in  StormKitStaticTargets-release.cmake.in  StormKitStaticTargets.cmake.in  StormKitTarget.cmake.in  meson.build  meson_options.txt  vcpkg.ini  xmake.lua
core/: CMakeLists.txt  Configure.hpp.in  meson.build
core/src/: Math.cpp  State.cpp  StateManager.cpp  TreeNode.cpp
edo/editor/: CMakeLists.txt
edo/editor/src/: main.cpp
edo/game/: CMakeLists.txt  README.md
edo/game/shaders/: sprite_fragment.glsl
edo/game/src/: Common.hpp  EdoApplication.cpp  EdoApplication.hpp  Tilemap.hpp  main.cpp
engine/: meson.build
engine/applications/: meson.build
engine/applications/SceneViewer/: data.qrc  meson.build
engine/samples/ModelLoading/: meson.build
engine/samples/PostFX/: meson.build
engine/shaders/: CubeMap.frag.glsl  CubeMap.vert.glsl  PBRColorPass.frag.glsl  PBRColorPass.vert.glsl  phong.frag.glsl  phong.vert.glsl
engine/src/: Engine.cpp  Log.hpp  Tinyobj.cpp
engine/src/core/: Bindable.cpp  DebugGUI.cpp  PipelineBuilder.cpp  Profiler.cpp  RingHardwareBuffer.cpp  ShaderGenerator.cpp  Transform.cpp  TransformComponentCache.hpp  Vertex.cpp
engine/src/data/: json.hpp  tiny_gltf.cpp
engine/src/drawable/: CubeMap.cpp  Drawable.cpp  Mesh.cpp  Model.cpp  SubMesh.cpp
engine/src/framegraph/: FrameGraph.cpp  FramePass.cpp  FramePassBuilder.cpp  FramePassResource.cpp  FramePassResourceHandle.cpp  FramePassResources.cpp
engine/src/framegraph_old/: FrameGraph.cpp  FramePass.cpp  FramePassBuilder.cpp  FramePassResource.cpp  FramePassResources.cpp
engine/src/graphics/: RenderQueue.cpp
engine/src/material/: CubeMapMaterial.cpp  CubeMapMaterialInstance.cpp  Material.cpp  MaterialInstance.cpp  PBRMaterial.cpp  PBRMaterialInstance.cpp
engine/src/mesh/: Model.cpp  Primitives.cpp  StaticMesh.cpp  StaticMeshRenderSystem.cpp  StaticSubMesh.cpp
engine/src/render/: Camera.cpp  Drawable.cpp  Material.cpp  RenderQueue.cpp  RenderSystem.cpp  Transform.cpp
engine/src/scene/: Camera.cpp  FPSCamera.cpp  PBRScene.cpp  Scene.cpp
entities/: CMakeLists.txt  meson.build
entities/src/: Component.cpp  EntityManager.cpp  MessageBus.cpp  System.cpp
graphics/: CMakeLists.txt
graphics/samples/RotatingCube/: CMakeLists.txt
graphics/shaders/: QuadFragment.hpp  QuadVertex.hpp  quad_fragment.glsl  quad_vertex.glsl
graphics/src/core/: Material.cpp  Mesh.cpp  MeshCache.cpp  Renderer.cpp  Vertex.cpp
graphics/src/framegraph/: FrameGraph.cpp  FrameGraphBuilder.cpp  FrameGraphResources.cpp  FramePass.cpp  FramePassBuilder.cpp
graphics/src/scenegraph/: CameraNode.cpp  DrawableManager.cpp  MaterialNode.cpp  Node.cpp  ObjectTree.cpp  PipelineNode.cpp  SceneGraph.cpp  SceneGraphObserver.cpp  SceneNode.cpp  SceneRenderer.cpp  StaticGeometryNode.cpp  TransformNode.cpp
graphics/src/system/: RenderSystem.cpp
image/: CMakeLists.txt  meson.build
image/src/: HDRImage.cpp  Image.cpp  JPEGImage.cpp  KTXImage.cpp  PNGImage.cpp  PPMImage.cpp  TARGAImage.cpp
image/src/private/: ImageData.hpp  ImageLoader.cpp  ImageLoader.hpp
log/: CMakeLists.txt  meson.build
log/examples/console_logger/: CMakeLists.txt
log/examples/file_logger/: CMakeLists.txt
log/src/: ConsoleLogger.cpp  FileLogger.cpp  LogColorizer.cpp  LogHandler.cpp  Logger.cpp
main/: StormKitTarget.cmake.in  meson.build
main/src/iOS/: Main.mm
main/src/linux/: Main.cpp
main/src/macOS/: Main.mm
main/src/win32/: Main.cpp
module/: CMakeLists.txt  meson.build
module/src/: AbstractModule.cpp  Module.cpp
module/src/posix/: ModuleImpl.cpp  ModuleImpl.hpp
module/src/win32/: ModuleImpl.cpp  ModuleImpl.hpp
render/: CMakeLists.txt  meson.build
render/cmake/: StormKitEngineConfig.cmake.in
render/samples/07 - Obj/: CMakeLists.txt
render/samples/Texture/: meson.build
render/samples/Triangle/: CMakeLists.txt  meson.build
render/samples/UniformBuffer/: CMakeLists.txt  meson.build
render/src/core/: CommandBuffer.cpp  CommandBufferRecorder.cpp  Device.cpp  DynamicLoader.cpp  Instance.cpp  OffscreenSurface.cpp  PhysicalDevice.cpp  Queue.cpp  Surface.cpp  Types.cpp  WindowSurface.cpp
render/src/pipeline/: AbstractPipeline.cpp  ComputePipeline.cpp  ComputePipelineState.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  GraphicsPipelineState.cpp  PipelineCache.cpp  RenderPass.cpp  RenderPassDescription.cpp  VertexBindingDescription.cpp  VertexInputAttributeDescription.cpp
render/src/resource/: ConvertFormatShaders.hpp  HardwareBuffer.cpp  Sampler.cpp  Shader.cpp  Texture.cpp  TextureView.cpp
render/src/sync/: Fence.cpp  Semaphore.cpp
window/: CMakeLists.txt  meson.build
window/plugins/: meson.build
window/plugins/Win32/: meson.build
window/plugins/X11/: meson.build
window/plugins/macOS/: meson.build
window/samples/simple_window/: CMakeLists.txt  meson.build
window/src/: AbstractInputHandler.cpp  AbstractWindow.cpp  AbstractWindow.hpp  AbstractWindow.inl  EventHandler.cpp  InputHandler.cpp  Log.hpp  Window.cpp
window/src/Linux/: Utils.cpp  Utils.hpp
window/src/Win32/: Utils.cpp  Utils.hpp  Win32Keyboard.cpp  Win32Keyboard.hpp  Win32Mouse.cpp  Win32Mouse.hpp  Win32Window.cpp  Win32Window.hpp
window/src/iOS/: AppDelegate.hpp  ViewController.h  ViewController.m  WindowImpl.hpp  WindowImpl.mm  iosMain.cpp  iosMain.hpp
window/src/macOS/: AutoReleasePoolWrapper.mm  InputHandlerImpl.h  InputHandlerImpl.mm  StormView.h  StormView.mm  StormWindow.h  StormWindow.m  StormWindowController.h  StormWindowController.mm  Utils.h  Utils.mm  VideoSettings.mm  WindowImpl.h  WindowImpl.mm
window/src/wayland/: WindowImpl.cpp  (+1 more)
(+640 files in other folders)
